--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "bcryptjs": "^2.4.3",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^11.11.7",
+    "gsap": "^3.12.5",
     "mongoose": "^8.7.0",
     "next": "^14.2.14",
     "next-auth": "^4.24.9",
     "react": "^18",
     "react-dom": "^18",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "three": "^0.170.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
