--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ GOOGLE_CLIENT_ID=your-google-client-id
 GOOGLE_CLIENT_SECRET=your-google-client-secret
 GITHUB_CLIENT_ID=your-github-client-id
 GITHUB_CLIENT_SECRET=your-github-client-secret
+GEMINI_API_KEY=AIzaSyDfbT4JLUN4-qss5Me62zZfBwPP-48Tk9M
