--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "mongoose": "^8.7.0",
     "next": "^14.2.14",
     "next-auth": "^4.24.9",
+    "nodemailer": "^6.9.16",
+    "openai": "^4.75.0",
     "react": "^18",
     "react-dom": "^18",
     "react-router-dom": "^6.26.2",
+    "react-scroll": "^1.9.0",
     "three": "^0.170.0"
   },
   "devDependencies": {
