--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ GOOGLE_CLIENT_SECRET=your-google-client-secret
 GITHUB_CLIENT_ID=your-github-client-id
 GITHUB_CLIENT_SECRET=your-github-client-secret
 GEMINI_API_KEY=AIzaSyDfbT4JLUN4-qss5Me62zZfBwPP-48Tk9M
+HUGGINGFACE_API_KEY=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
+
