--- a/package.json
+++ b/package.json
@@ -9,20 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@huggingface/inference": "^2.8.1",
     "@storybook/react": "^8.3.6",
     "bcryptjs": "^2.4.3",
     "emailjs-com": "^3.2.0",
+    "fetch-blob": "^4.0.0",
     "framer-motion": "^11.11.7",
     "gsap": "^3.12.5",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
-    "next": "^14.2.14",
+    "next": "^12.3.4",
     "next-auth": "^4.24.9",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.16",
     "openai": "^4.75.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-router-dom": "^6.26.2",
     "react-scroll": "^1.9.0",
+    "react-toastify": "^10.0.6",
     "three": "^0.170.0"
   },
   "devDependencies": {
