--- a/.env
+++ b/.env
@@ -7,4 +7,6 @@ GITHUB_CLIENT_ID=your-github-client-id
 GITHUB_CLIENT_SECRET=your-github-client-secret
 GEMINI_API_KEY=AIzaSyDfbT4JLUN4-qss5Me62zZfBwPP-48Tk9M
 HUGGINGFACE_API_KEY=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
+NEXT_PUBLIC_API_KEY=05c5c2d52e5047c0a06dde42cded46c6
+NEXT_PUBLIC_SECRET_KEY=47f94fe882de4c6fa1399ede10628c9a
 
