--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google-ai/generativelanguage": "^2.8.0",
     "@huggingface/inference": "^2.8.1",
     "@storybook/react": "^8.3.6",
     "bcryptjs": "^2.4.3",
     "emailjs-com": "^3.2.0",
     "fetch-blob": "^4.0.0",
-    "framer-motion": "^11.11.7",
+    "framer-motion": "^11.15.0",
     "gsap": "^3.12.5",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
