--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "three": "^0.170.0"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.9.2",
     "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
