--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "openai": "^4.75.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^6.26.2",
     "react-scroll": "^1.9.0",
     "react-toastify": "^10.0.6",
