--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "init-subscriptions": "node --experimental-modules scripts/init-subscriptions.js"
   },
   "dependencies": {
     "@google-ai/generativelanguage": "^2.8.0",
     "@huggingface/inference": "^2.8.1",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^6.5.0",
     "@storybook/react": "^8.3.6",
     "bcryptjs": "^2.4.3",
     "emailjs-com": "^3.2.0",
@@ -18,19 +21,22 @@
     "framer-motion": "^11.15.0",
     "gsap": "^3.12.5",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.483.0",
     "mongoose": "^8.7.0",
     "next": "^15.1.0",
-    "next-auth": "^4.24.9",
+    "next-auth": "^4.24.11",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.16",
     "openai": "^4.75.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.26.2",
     "react-scroll": "^1.9.0",
     "react-toastify": "^10.0.6",
-    "three": "^0.170.0"
+    "three": "^0.170.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^5.9.2",
