--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "^6.5.0",
     "@storybook/react": "^8.3.6",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.6.0",
     "emailjs-com": "^3.2.0",
     "fetch-blob": "^4.0.0",
     "framer-motion": "^11.15.0",
