--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
+    "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^6.26.2",
     "react-scroll": "^1.9.0",
     "react-toastify": "^10.0.6",
