--- a/netlify.toml
+++ b/netlify.toml
@@ -2,5 +2,23 @@
   command = "npm run build"
   publish = ".next"
 
+[build.environment]
+  NEXT_DISABLE_SOURCEMAPS = "true"
+  NEXT_TELEMETRY_DISABLED = "1"
+  
 [[plugins]]
   package = "@netlify/plugin-nextjs"
+
+# Not-found sayfası için yönlendirme
+[[redirects]]
+  from = "/_not-found"
+  to = "/404.html"
+  status = 302
+  
+# SSR sayfaları için fallback
+[[redirects]]
+  from = "/*"
+  to = "/.netlify/functions/server"
+  status = 200
+  force = false
+  conditions = {Path = {match = "\\.(js|css|map|jpg|png|svg|ico)$", inverted = true}}
