--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "npm i -D tailwindcss postcss autoprefixer && next build",
     "start": "next start",
     "lint": "next lint",
     "init-subscriptions": "node --experimental-modules scripts/init-subscriptions.js"
@@ -38,7 +38,13 @@
     "react-scroll": "^1.9.0",
     "react-toastify": "^10.0.6",
     "three": "^0.170.0",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "@netlify/plugin-nextjs": "^5.9.2",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.14",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.13"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^5.9.2",
