--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "npm i -D tailwindcss postcss autoprefixer && next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "init-subscriptions": "node --experimental-modules scripts/init-subscriptions.js"
@@ -39,19 +39,13 @@
     "react-toastify": "^10.0.6",
     "three": "^0.170.0",
     "uuid": "^11.1.0",
-    "@netlify/plugin-nextjs": "^5.9.2",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.14",
+    "tailwindcss": "^3.4.13",
     "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.13"
+    "autoprefixer": "^10.4.20"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^5.9.2",
-    "autoprefixer": "^10.4.20",
     "eslint": "^8",
-    "eslint-config-next": "14.2.14",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.13"
+    "eslint-config-next": "14.2.14"
   }
 }
